# signals

./: CMakeLists.txt  README  README.md
plugins/: linuxshutdown.smx
scripting/: linuxshutdown.sp  signals_example.sp
scripting/include/: signals.inc
signals_extension/: CMakeLists.txt  extension.cpp
sourcemod/public/signals_extension/: CMakeLists.txt  extension.cpp  extension.h  signal_handler.h  signals.cpp  signals.h  smsdk_config.h
